tooling/nargo_cli/tests/snapshots/execution_success/regression_8755/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main() -> pub Field {
    func_2([(0, &mut -292434322542114415011969994633470574393)])
}

unconstrained fn func_2(mut b: [(u32, &mut Field); 1]) -> Field {
    let mut idx_e: u32 = 0;
    loop {
        if idx_e == 1 {
            break;
        } else {
            idx_e = idx_e + 1;
        }
    }
    157653526363045079447323020681982670581 / *b[0].1
}
