tooling/nargo_cli/tests/snapshots/execution_success/regression_8755/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[regression_8755] Circuit output: 0x0a7b42b36ae0ac4cefcf78a9e9b00e67a6a402a68ab81bdc904f41fac753cc81
